[gd_scene load_steps=2 format=3 uid="uid://c2cft40a3qcuh"]

[ext_resource type="Script" uid="uid://cokx3qjfhfhem" path="res://scenes/main.gd" id="1_o5qli"]

[node name="Main" type="Control"]
custom_minimum_size = Vector2(540, 960)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_o5qli")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Portrait of player #1"
icon_alignment = 1

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Portrait of player #2"
icon_alignment = 1

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Portrait of player #3"
icon_alignment = 1

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Portrait of player #4"
icon_alignment = 1

[node name="Button5" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Portrait of player #5"
icon_alignment = 1

[node name="Button6" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Portrait of player #6"
icon_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button6" to="." method="_on_button_6_pressed"]
